Privacy View Update
Created a small privacy view for the users

--- a/HireManagement/HireManagement/Views/Home/Privacy.cshtml
+++ b/HireManagement/HireManagement/Views/Home/Privacy.cshtml
@@ -1,6 +1,41 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+    <link href="~/css/privacy.css" rel="stylesheet" />
+<div class="container col-12 h-100 bg-white text-center privacylist ">
+    <div class="row col-12">
+        <p>
+            This Privacy Policy, together with the Terms of Use posted on our Website, set forth the general rules and policies governing your use of our Website.
+            Depending on your activities when visiting our Website, you may be required to agree to additional terms and conditions.<br />
+            We generally keep this Privacy Policy posted on the Website and you should review it frequently, as it may change from time to time without notice.
+            Any changes will be effective immediately upon the posting of the revised Privacy Policy. WHEN YOU ACCESS OUR WEBSITE, YOU AGREE TO THIS PRIVACY POLICY.
+            IF YOU DO NOT AGREE TO THIS PRIVACY POLICY, OR TO ANY CHANGES WE MAY SUBSEQUENTLY MAKE, IMMEDIATELY STOP ACCESSING OUR WEBSITE.<br />
+        </p>
+        <p>
+            <span class="font-weight-bold points">Information We Collect</span> <br />
+            We typically collect two kinds of information about you: (a) information that you provide which personally identifies you; and (b) information that does not personally identify you which we automatically collect when you visit our website or that you provide us.
+        </p>
 
-<p>Use this page to detail your site's privacy policy.</p>
+        <p>
+            <span class="font-weight-bold">Personally Identifiable Information:</span> <br />
+            Our definition of personally identifiable information includes any information that may be used to specifically identify or contact you, such as your name, address, e-mail address, phone number, etc. As a general policy, to facilitate the use of HireManagement content, you must provide personally identifiable information when registering. Affiliates of HireManagement may also be required to provide a tax identification number.
+        </p>
+
+
+        <p>
+            <span class="font-weight-bold">Non-Personal Information:</span> <br />
+            The  definition of non-personal information is any information that does not personally identify you. Non-personal information can include certain personally identifiable information that has been de-identified; that is, information that has been rendered anonymous.
+            We obtain non-personal information about you from information that you provide us, either separately or together with your personally identifiable information. We also automatically collect certain non-personal information from you when you access our Websites.
+            This information can include, among other things, IP addresses, the type of browser you are using (e.g., Internet Explorer, Firefox, Safari, etc.), the third party website from which your visit originated, the operating system you are using (e.g., Vista, Windows XP, Macintosh OS, etc.), the domain name of your Internet service provider (e.g., America Online, NetZero, etc.), the specific areas of the Website that you visit, and the duration of your visit.
+        </p>
+
+        
+        <p>
+            <span class="font-weight-bold">Usage and share of your information:</span> <br />
+            All the provided information by you will be used and stored in a DataBase on our server. This information is then processed and used for implementing our methods in the work flow of our website. If you decide that the provided information should no longer be available to use by our services, you can always delete your account. If there is a technical problem, you can contact our support and report a problem.
+        </p>
+
+
+
+    </div>
+</div>
