--- a/HireManagement/HireManagement/Views/Shared/_Layout.cshtml
+++ b/HireManagement/HireManagement/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; HireManagement made by Valentin Kolev <a class="float-right" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; HireManagement made by Valentin Kolev <a class="font-weight-bold" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
