Animation Library Added
Included an open source animation library.
Fixed the font-style and family on all pages.
Fixed some transition mistakes in privacy page load

--- a/HireManagement/HireManagement/Views/Home/Contracts.cshtml
+++ b/HireManagement/HireManagement/Views/Home/Contracts.cshtml
@@ -1,1 +1,3 @@
-﻿<h1>This will be our Contracts area</h1>
+﻿<link href="~/css/sectionpages.css" rel="stylesheet" />
+
+<h1 class="display-3 text-center animated fadeIn" style="font-family:Lobster">Contracts</h1>
