--- a/HireManagement/HireManagement/Views/Home/ContactUs.cshtml
+++ b/HireManagement/HireManagement/Views/Home/ContactUs.cshtml
@@ -1,1 +1,3 @@
-﻿<h1>Here you can contact us</h1>
+﻿<link href="~/css/sectionpages.css" rel="stylesheet" />
+
+<h1 class="display-3 text-center animated fadeIn" style="font-family:Lobster">ContactUs</h1>
