--- a/HireManagement/HireManagement/Views/Home/Index.cshtml
+++ b/HireManagement/HireManagement/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 <link href="~/css/landing.css" rel="stylesheet" />
-<h1 class="display-3 text-center" style="font-family:Lobster">HireManagement</h1>
-<h1 class="display-4 text-center" style="font-family:Lobster">Your employement is our priority</h1>
-
+<div class="animated bounceIn">
+    <h1 class="display-3 text-center" style="font-family:Lobster">HireManagement</h1>
+    <h1 class="display-4 text-center" style="font-family:Lobster">Your employement is our priority</h1>
+</div>
