--- a/HireManagement/HireManagement/Views/Home/Privacy.cshtml
+++ b/HireManagement/HireManagement/Views/Home/Privacy.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Privacy Policy";
 }
     <link href="~/css/privacy.css" rel="stylesheet" />
-<div class="container col-12 h-100 bg-white text-center privacylist ">
+<div class="container col-12 bg-white text-center privacylist animated fadeIn ">
     <div class="row col-12">
         <p>
             This Privacy Policy, together with the Terms of Use posted on our Website, set forth the general rules and policies governing your use of our Website.
