--- a/HireManagement/HireManagement/Views/Home/Workers.cshtml
+++ b/HireManagement/HireManagement/Views/Home/Workers.cshtml
@@ -1,6 +1,6 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
-<h1>Workers section</h1>
+﻿<link href="~/css/sectionpages.css" rel="stylesheet" />
+
+<h1 class="display-3 text-center animated fadeIn" style="font-family:Lobster">Workers</h1>
+<div class="container col-12 bg-white">
+
+</div>
