--- a/HireManagement/HireManagement/Views/Home/Contracts.cshtml
+++ b/HireManagement/HireManagement/Views/Home/Contracts.cshtml
@@ -1,3 +1,57 @@
 ﻿<link href="~/css/sectionpages.css" rel="stylesheet" />
+<h1 class="display-3  text-center animated fadeIn" style="font-family:Lobster">Contracts</h1>
+<div class="container animated fadeIn col-12">
+    <div class="row bg-white rounded mb-5 ">
+        <div class="content pl-3">
+            <h2 class="text-center" style="font-family:Lobster">We offer </h2>
+            <ul class="float-left col-5">
+                <li>
+                    <h5>Endless contracts to choose from</h5>
+                    <p>The empoyment has never been easier with our  services. You apply, we do the rest.</p>
+                </li>
+                <li>
+                    <h5>Daily updated Data Base</h5>
+                    <p>
+                        You changed your adress? Got a new specialty you would like to edit?
+                        Our DataBase will include every change you decide to make on your account
+                    </p>
+                </li>
+                <li>
+                    <h5>Safe and easy to use User Interface</h5>
+                    <p>
+                        Ever felt lost in a website? Well here you would not need a minimap to find where to register!
+                    </p>
+                </li>
+            </ul>
+            <img class="float-right rounded m-2 animated flipInX contractImage" src="https://blog.cinfin.com/wp-content/uploads/2015/10/signing-contract.jpg    " />
+        </div>
+    </div>
 
-<h1 class="display-3 text-center animated fadeIn" style="font-family:Lobster">Contracts</h1>
+    <div class="row bg-white rounded mb-5">
+        <div class="content pl-3">
+            <h2 class="text-center" style="font-family:Lobster">Your options</h2>
+            <ul class="float-right col-5">
+                <li>
+                    <h5>Create and publish a contract for the community</h5>
+                    <p>You need something done? You need to find workers? Use HireManagement and bring your ideas into the reality!</p>
+                </li>
+                <li>
+                    <h5>Publish your CV and wait for a response</h5>
+                    <p>
+                       You want to work but you don't exactly know what are you up to at the moment? We got you covered!
+                       Publish your CV and let the employers contact you.
+                    </p>
+                </li>
+                <li>
+                    <h5>Search for your work sphere and join in</h5>
+                    <p>
+                       You want to work and you know how things are done in your sphere. Wonderful! Explore HireManagement contracts and start now!
+                    </p>
+                </li>
+            </ul>
+            <img class="float-left img-fluid rounded m-2 animated flipInX contractImage" src="https://innovationexcellence.com/wp-content/uploads/2017/01/idea-factory-crop-600x338.jpeg" />
+        </div>
+    </div>
+
+
+</div>
