--- a/HireManagement/HireManagement/wwwroot/css/sectionpages.css
+++ b/HireManagement/HireManagement/wwwroot/css/sectionpages.css
@@ -3,3 +3,6 @@
     color: white;
     text-shadow: -2px -2px 0 #000, 3px -3px 0 #000, -3px 3px 0 #000, 2px 2px 0 #000;
 }
+.contractImage{
+    animation-delay:0.1s;
+}
