--- a/HireManagement/HireManagement/wwwroot/css/site.css
+++ b/HireManagement/HireManagement/wwwroot/css/site.css
@@ -65,7 +65,9 @@ body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
     background-image: url("../images/wallpaper.jpg");
-    background-size:100% 100%;
+     background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
 }
 .footer {
     position: absolute;
