Workers/Contact Us view structure and more
Created the content of Workers base section
Contact us is in process
Separated Review grades enumerable in another file and folder
Added Services folder for WorkerService and Contract Service

--- a/HireManagement/HireManagement/Views/Home/Contracts.cshtml
+++ b/HireManagement/HireManagement/Views/Home/Contracts.cshtml
@@ -7,13 +7,13 @@
             <ul class="float-left col-5">
                 <li>
                     <h5>Endless contracts to choose from</h5>
-                    <p>The empoyment has never been easier with our  services. You apply, we do the rest.</p>
+                    <p>The employment has never been easier with our  services. You apply, we do the rest.</p>
                 </li>
                 <li>
                     <h5>Daily updated Data Base</h5>
                     <p>
                         You changed your adress? Got a new specialty you would like to edit?
-                        Our DataBase will include every change you decide to make on your account
+                        Our DataBase will include every change you decide to make on your account!
                     </p>
                 </li>
                 <li>
