--- a/HireManagement/HireManagement/Views/Home/Workers.cshtml
+++ b/HireManagement/HireManagement/Views/Home/Workers.cshtml
@@ -1,6 +1,56 @@
 ﻿<link href="~/css/sectionpages.css" rel="stylesheet" />
 
 <h1 class="display-3 text-center animated fadeIn" style="font-family:Lobster">Workers</h1>
-<div class="container col-12 bg-white">
-
+<h3 class="text-center animated fadeIn" style="font-family:Lobster">Just a few of them</h3>
+<div class="card-group animated flipInX">
+    <div class="card m-3 text-center ">
+        <img class="card-img-top " src="~/images/meployee.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+    <div class="card m-3 text-center">
+        <img class="card-img-top" src="~/images/femployee.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+    <div class="card m-3">
+        <img class="card-img-top" src="~/images/femployee.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+</div>
+<div class="card-group animated flipInX">
+    <div class="card m-3 text-center ">
+        <img class="card-img-top " src="~/images/meployee.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+    <div class="card m-3 text-center">
+        <img class="card-img-top" src="~/images/femployee.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
+    <div class="card m-3">
+        <img class="card-img-top" src="~/images/meployee.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+    </div>
 </div>
