--- a/HireManagement/HireManagement/Views/Home/ContactUs.cshtml
+++ b/HireManagement/HireManagement/Views/Home/ContactUs.cshtml
@@ -1,3 +1,14 @@
 ﻿<link href="~/css/sectionpages.css" rel="stylesheet" />
 
 <h1 class="display-3 text-center animated fadeIn" style="font-family:Lobster">ContactUs</h1>
+
+<row class="text-center">
+    <div class="card  animated flipInX" style="width: 18rem;">
+        <img class="card-img-top" src="~/images/boss.jpg" alt="Card image cap">
+        <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+    </div>
+</row>
