--- a/HireManagement/HireManagement/Views/_ViewImports.cshtml
+++ b/HireManagement/HireManagement/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using HireManagement
 @using HireManagement.Models
+@using HireManagement.Models.RegisterModels
+@using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
