ContactUs view page modified

--- a/HireManagement/HireManagement/Views/Home/ContactUs.cshtml
+++ b/HireManagement/HireManagement/Views/Home/ContactUs.cshtml
@@ -2,13 +2,22 @@
 
 <h1 class="display-3 text-center animated fadeIn" style="font-family:Lobster">ContactUs</h1>
 
-<row class="text-center">
-    <div class="card  animated flipInX" style="width: 18rem;">
-        <img class="card-img-top" src="~/images/boss.jpg" alt="Card image cap">
-        <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+<row class="text-left">
+  
+    <div class="jumbotron animated fadeIn">
+        <h2 class="display-4 text-center">Valentin Kolev</h2>
+        <div class=" card float-left animated flipInX mr-3" style="width: 10rem;height: 15rem;">
+            <img class="card-img-top h-100" src="~/images/owner.jpg" alt="Card image cap">     
+        </div>
+        <div>
+            <p class="lead">Hello fellow HireManagement users, I am the owner of this project and you can always feel free to contact me for any questions/suggestions that you might have.<br />
+            I will always try to give a proper feedback and respond as soon as possible!</p>
+            <hr class="my-4">
+            <div class="text-center">
+                <a class="btn btn-primary btn-lg" href="https://www.facebook.com/profile.php?id=100003786618683" role="button">Facebook</a>
+                <a class="btn btn-primary btn-lg bg-dark" href="https://www.instagram.com/valentin_kolev_33/" role="button">Instagram</a>
+                <a class="btn btn-primary btn-lg" href="#" role="button">Twitter</a>
+            </div>
         </div>
     </div>
 </row>
