SignIn View Sections Included
Nav Bar changes if user is signed in ...
Next step - authorize proper implementation

--- a/HireManagement/HireManagement/Views/Shared/_Layout.cshtml
+++ b/HireManagement/HireManagement/Views/Shared/_Layout.cshtml
@@ -24,16 +24,30 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Contracts">Contracts</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-controller="Home" asp-action="Workers">Workers</a>
-                        </li>
+                        @if (signInManager.IsSignedIn(User))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="ContractsScaffold" asp-action="Index">View Contracts</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="WorkersScaffold" asp-action="Index">View Workers</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="Contracts">Contracts</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Home" asp-action="Workers">Workers</a>
+                            </li>
+                        }
+
+                    
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-controller="Home" asp-action="ContactUs">ContactUs</a>
                         </li>
-                      
+
                     </ul>
                     <ul class="navbar-nav flex-grow-1">
                         @if (signInManager.IsSignedIn(User))
