--- a/HireManagement/HireManagement/Views/Account/Register.cshtml
+++ b/HireManagement/HireManagement/Views/Account/Register.cshtml
@@ -11,6 +11,11 @@
         <form method="post">
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
+                <label>Nickname</label>
+                <input asp-for="UserNickName" class="form-control" />
+                <span asp-validation-for="UserNickName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
@@ -24,6 +29,10 @@
                 <label asp-for="ConfirmPassword"></label>
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="City"></label>
+                <input asp-for="City" class="form-control" />
             </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
