UserRoles Mapping Table
Fully functional, easily accessible

--- a/HireManagement/HireManagement/Views/_ViewImports.cshtml
+++ b/HireManagement/HireManagement/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using HireManagement
 @using HireManagement.Models
+@using HireManagement.ViewModels
 @using HireManagement.Models.RegisterModels
 @using Microsoft.AspNetCore.Identity;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
