Admin Panel in progress
Delete options incoming

--- a/HireManagement/HireManagement/Views/ContractsScaffold/Index.cshtml
+++ b/HireManagement/HireManagement/Views/ContractsScaffold/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@model IEnumerable<HireManagement.Models.Contract>
+@inject SignInManager<ApplicationUser> signInManager;
 
 @{
     ViewData["Title"] = "Index";
@@ -30,23 +31,32 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.ContractName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ExpiryDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Reward)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ContractID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ContractID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ContractID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ContractName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.ExpiryDate)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Reward)
+                </td>
+                <td>
+                    @if (signInManager.IsSignedIn(User) && User.IsInRole("Moderator")||User.IsInRole("Admin"))
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.ContractID">Edit</a> 
+                    }
+                    <a asp-action="Details" asp-route-id="@item.ContractID">View</a> 
+
+                    @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin")||User.IsInRole("Moderator"))
+                    {
+                        <a asp-action="Delete" asp-route-id="@item.ContractID">Delete</a>
+                    }
+
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
