--- a/HireManagement/HireManagement/Views/Home/Contracts.cshtml
+++ b/HireManagement/HireManagement/Views/Home/Contracts.cshtml
@@ -38,18 +38,19 @@
                 <li>
                     <h5>Publish your CV and wait for a response</h5>
                     <p>
-                       You want to work but you don't exactly know what are you up to at the moment? We got you covered!
-                       Publish your CV and let the employers contact you.
+                        You want to work but you don't exactly know what are you up to at the moment? We got you covered!
+                        Publish your CV and let the employers contact you.
                     </p>
                 </li>
                 <li>
                     <h5>Search for your work sphere and join in</h5>
                     <p>
-                       You want to work and you know how things are done in your sphere. Wonderful! Explore HireManagement contracts and start now!
+                        You want to work and you know how things are done in your sphere. Wonderful! Explore HireManagement contracts and start now!
                     </p>
                 </li>
             </ul>
-            <img class="float-left img-fluid rounded m-2 animated flipInX contractImage" src="https://innovationexcellence.com/wp-content/uploads/2017/01/idea-factory-crop-600x338.jpeg" />
+
+            <img class="float-left img-fluid rounded m-2 animated flipInX contractImage" src="~/images/contractpaper.jpg" />
         </div>
     </div>
 
