--- a/HireManagement/HireManagement/Views/ContractsScaffold/Details.cshtml
+++ b/HireManagement/HireManagement/Views/ContractsScaffold/Details.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Details</h1>
 
-<div>
+<div class="bg-white p-3">
     <h4>Contract</h4>
     <hr />
     <dl class="row">
@@ -30,7 +30,7 @@
         </dd>
     </dl>
 </div>
+<br />
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ContractID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" class="btn-dark  rounded">Back to List</a>
 </div>
