Documentation/Visual Update

--- a/HireManagement/HireManagement/Views/Home/Contracts.cshtml
+++ b/HireManagement/HireManagement/Views/Home/Contracts.cshtml
@@ -23,7 +23,7 @@
                     </p>
                 </li>
             </ul>
-            <img class="float-right rounded m-2 animated flipInX contractImage" src="https://blog.cinfin.com/wp-content/uploads/2015/10/signing-contract.jpg" />
+            <img class="float-right w-50 h-75 rounded m-2 animated flipInX contractImage" src="https://blog.cinfin.com/wp-content/uploads/2015/10/signing-contract.jpg" />
         </div>
     </div>
 
@@ -50,7 +50,7 @@
                 </li>
             </ul>
 
-            <img class="float-left img-fluid rounded m-2 animated flipInX contractImage" src="~/images/contractpaper.jpg" />
+            <img class="float-left w-50 h-75 img-fluid rounded m-2 animated flipInX contractImage" src="~/images/contractpaper.jpg" />
         </div>
     </div>
 
