--- a/HireManagement/HireManagement/Views/Home/Workers.cshtml
+++ b/HireManagement/HireManagement/Views/Home/Workers.cshtml
@@ -3,45 +3,45 @@
 <h1 class="display-3 text-center animated fadeIn" style="font-family:Lobster">Workers</h1>
 <h3 class="text-center animated fadeIn" style="font-family:Lobster">Just a few of them</h3>
 <div class="card-group animated flipInX">
-    <div class="card m-3 text-center ">
-        <img class="card-img-top " src="~/images/meployee.jpg" alt="Card image cap">
+    <div class="card m-3 ">
+        <img class="card-img-top " src="https://thenypost.files.wordpress.com/2014/10/beards.jpg?quality=90&strip=all&w=1200" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">John Wesley</h5>
+            <p class="card-text">HireManagement gave me the oportunity to make my dreams come true! Now I have my own company and I can easily contact other people to join me.</p>
+            <p class="card-text"><small class="text-muted">/Owner of WoodCO factory/</small></p>
         </div>
     </div>
-    <div class="card m-3 text-center">
-        <img class="card-img-top" src="~/images/femployee.jpg" alt="Card image cap">
+    <div class="card m-3 ">
+        <img class="card-img-top" src="https://www.thebusinesswomanmedia.com/wp-content/uploads/2015/06/AR_SuitWide_P.jpg" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Lindsey Parker</h5>
+            <p class="card-text">My dad used to be an economy teacher. Back in my days, I thought I will never join the family business. It was until I found about HireManagement, then everything changed!</p>
+            <p class="card-text"><small class="text-muted">/Real-estate agent/</small></p>
         </div>
     </div>
     <div class="card m-3">
-        <img class="card-img-top" src="~/images/femployee.jpg" alt="Card image cap">
+        <img class="card-img-top" src="https://k48b9e9840-flywheel.netdna-ssl.com/wp-content/uploads/2016/01/woman_agri_final.jpg" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Ekaterina Petrov</h5>
+            <p class="card-text"> It was back in 2019 when I was still searching for a application to easily manage my small farm. I use it often to contact local farmers when I need some real man power.  </p>
+            <p class="card-text"><small class="text-muted">/Landlady in Novgorod/</small></p>
         </div>
     </div>
 </div>
 <div class="card-group animated flipInX">
-    <div class="card m-3 text-center ">
-        <img class="card-img-top " src="~/images/meployee.jpg" alt="Card image cap">
+    <div class="card m-3 ">
+        <img class="card-img-top " src="https://th.bing.com/th/id/OIP.gRFJDSWq1nS7AUUlAKXdBgHaE7?pid=Api&rs=1" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Frederick De Leo</h5>
+            <p class="card-text">I've always wondered how useful the technologies are nowadays. When I was a kid, my parents used to have a local work-board in their hometown where they posted daily news and offers. Thank god HireManagement exists, so I can check in daily for some hard work</p>
+            <p class="card-text"><small class="text-muted">/Storage werehouse worker/</small></p>
         </div>
     </div>
     <div class="card m-3 text-center">
         <img class="card-img-top" src="~/images/femployee.jpg" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            <h5 class="card-title">Anna Nickelson</h5>
+            <p class="card-text">This app is simply great. Never been actually keen on using those kind of apps, but HireManagement changed my mind. Give it a try!</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
     </div>
