--- a/HireManagement/HireManagement/Views/_ViewImports.cshtml
+++ b/HireManagement/HireManagement/Views/_ViewImports.cshtml
@@ -3,4 +3,5 @@
 @using HireManagement.ViewModels
 @using HireManagement.Models.RegisterModels
 @using Microsoft.AspNetCore.Identity;
+@using System.Security.Claims;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
