--- a/HireManagement/HireManagement/Views/Administration/ListRoles.cshtml
+++ b/HireManagement/HireManagement/Views/Administration/ListRoles.cshtml
@@ -21,9 +21,12 @@
                     <h5 class="card-title">@role.Name</h5>
                 </div>
                 <div class="card-footer">
-                    <a class="btn btn-primary" asp-action="EditRole" asp-controller="Administration" asp-route-id="@role.Id">
-                    Edit</a>
-                    <a href="#" class="btn btn-danger">Delete</a>
+                    <form asp-action="DeleteUser" asp-route-id="@role.Id" method="post">
+                        <a class="btn btn-primary" asp-action="EditRole" asp-controller="Administration" asp-route-id="@role.Id">
+                            Edit
+                        </a>
+                        <button type="submit" class="btn btn-danger" onclick="return confirm('Are you sure you want to delete  user : @role.Name ? ')">Delete</button>
+                    </form>
                 </div>
             </div>
         }
