--- a/HireManagement/HireManagement/Views/ContractsScaffold/Create.cshtml
+++ b/HireManagement/HireManagement/Views/ContractsScaffold/Create.cshtml
@@ -3,19 +3,25 @@
 @{
     ViewData["Title"] = "Create";
 }
-
+<center>
+  
 <h1>Create</h1>
 
 <h4>Contract</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row bg-white rounded text-center col-6">
+    <div class="col-12">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="ContractName" class="control-label"></label>
                 <input asp-for="ContractName" class="form-control" />
                 <span asp-validation-for="ContractName" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="EmployerEmail" class="control-label"></label>
+                <input asp-for="EmployerEmail" class="form-control" />
+                <span asp-validation-for="EmployerEmail" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ExpiryDate" class="control-label"></label>
@@ -28,6 +34,16 @@
                 <span asp-validation-for="Reward" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Information" class="control-label"></label>
+                <input asp-for="Information" class="form-control" />
+                <span asp-validation-for="Information" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Preference" class="control-label"></label>
+                <input asp-for="Preference" class="form-control" />
+                <span asp-validation-for="Preference" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" method="post" value="Create" class="btn btn-primary" />
             </div>
         </form>
@@ -37,7 +53,7 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+</center>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
