--- a/HireManagement/HireManagement/Views/ContractsScaffold/Delete.cshtml
+++ b/HireManagement/HireManagement/Views/ContractsScaffold/Delete.cshtml
@@ -3,37 +3,50 @@
 @{
     ViewData["Title"] = "Delete";
 }
+    <center>
+        <h1>Delete</h1>
 
-<h1>Delete</h1>
+        <h3>Are you sure you want to delete this?</h3>
+        <div>
+            <h4>Contract</h4>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ContractName)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.ContractName)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.EmployerEmail)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.EmployerEmail)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.ExpiryDate)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.ExpiryDate)
+                </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Reward)
+                </dt>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Reward)
+                </dd>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Information)
+                </dd>
+                <dd class="col-sm-10">
+                    @Html.DisplayFor(model => model.Preference)
+                </dd>
+            </dl>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Contract</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ContractName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ContractName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ExpiryDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ExpiryDate)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Reward)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Reward)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="ContractID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="ContractID" />
+                <input type="submit" value="Delete" class="btn btn-danger" /> |
+                <a asp-action="Index">Back to List</a>
+            </form>
+        </div>
+    </center>
