--- a/HireManagement/HireManagement/Views/ContractsScaffold/Edit.cshtml
+++ b/HireManagement/HireManagement/Views/ContractsScaffold/Edit.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
+<center>
 <h1>Edit</h1>
 
 <h4>Contract</h4>
@@ -19,6 +19,11 @@
                 <span asp-validation-for="ContractName" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="EmployerEmail" class="control-label"></label>
+                <input asp-for="EmployerEmail" class="form-control" />
+                <span asp-validation-for="EmployerEmail" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ExpiryDate" class="control-label"></label>
                 <input asp-for="ExpiryDate" class="form-control" />
                 <span asp-validation-for="ExpiryDate" class="text-danger"></span>
@@ -27,6 +32,16 @@
                 <label asp-for="Reward" class="control-label"></label>
                 <input asp-for="Reward" class="form-control" />
                 <span asp-validation-for="Reward" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Information" class="control-label"></label>
+                <textarea asp-for="Information" class="form-control" />
+                <span asp-validation-for="Information" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Preference" class="control-label"></label>
+                <textarea asp-for="Preference" class="form-control" />
+                <span asp-validation-for="Preference" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -38,7 +53,7 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+</center>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
