--- a/HireManagement/HireManagement/Views/ContractsScaffold/Index.cshtml
+++ b/HireManagement/HireManagement/Views/ContractsScaffold/Index.cshtml
@@ -5,8 +5,9 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
-<form asp-controller="ContractsScaffold" asp-action="Index" method="get">
+<div class="animated bounceInDown">
+<h1>Our contracts board right here!</h1>
+<form   asp-controller="ContractsScaffold" asp-action="Index" method="get">
     <p>
         Search: <input type="text" name="searchText">
         <input type="submit" value="Filter" />
@@ -33,30 +34,34 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ContractName)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ExpiryDate)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Reward)
-                </td>
-                <td>
-                    @if (signInManager.IsSignedIn(User) && User.IsInRole("Moderator")||User.IsInRole("Admin"))
-                    {
-                        <a asp-action="Edit" asp-route-id="@item.ContractID">Edit</a> 
-                    }
-                    <a asp-action="Details" asp-route-id="@item.ContractID">View</a> 
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ContractName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ExpiryDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Reward)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem=>item.EmployerEmail)
+            </td>
+            <td>
+                @if (signInManager.IsSignedIn(User) && User.IsInRole("Moderator") || User.IsInRole("Admin") || item.UserID == this.User.FindFirstValue(ClaimTypes.NameIdentifier))
+                {
+                    <a asp-action="Edit" asp-route-id="@item.ContractID">| Edit |</a>
+                }
+                <a asp-action="Details" asp-route-id="@item.ContractID"> View </a>
 
-                    @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin")||User.IsInRole("Moderator"))
-                    {
-                        <a asp-action="Delete" asp-route-id="@item.ContractID">Delete</a>
-                    }
+                @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin") || User.IsInRole("Moderator") || item.UserID == this.User.FindFirstValue(ClaimTypes.NameIdentifier))
+                {
+                    <a asp-action="Delete" asp-route-id="@item.ContractID">| Delete |</a>
+                }
 
-                </td>
-            </tr>
+            </td>
+        </tr>
         }
     </tbody>
 </table>
+</div>
