--- a/HireManagement/HireManagement/Views/WorkersScaffold/Delete.cshtml
+++ b/HireManagement/HireManagement/Views/WorkersScaffold/Delete.cshtml
@@ -3,48 +3,60 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
+<center>
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Worker</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <dl class="row bg-white rounded">
+        <dt class="col-6">
             @Html.DisplayNameFor(model => model.FirstName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-6">
             @Html.DisplayFor(model => model.FirstName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-6">
             @Html.DisplayNameFor(model => model.LastName)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-6">
             @Html.DisplayFor(model => model.LastName)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-6">
             @Html.DisplayNameFor(model => model.Age)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-6">
             @Html.DisplayFor(model => model.Age)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-6">
             @Html.DisplayNameFor(model => model.City)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-6">
             @Html.DisplayFor(model => model.City)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-6">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-6">
             @Html.DisplayFor(model => model.Email)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-6">
+            @Html.DisplayNameFor(model => model.PhoneNumber)
+        </dt>
+        <dd class="col-6">
+            @Html.DisplayFor(model => model.PhoneNumber)
+        </dd>
+        <dt class="col-6">
+            @Html.DisplayNameFor(model => model.EmployedOnPosition)
+        </dt>
+        <dd class="col-6">
+            @Html.DisplayFor(model => model.EmployedOnPosition)
+        </dd>
+        <dt class="col-6">
             @Html.DisplayNameFor(model => model.JoinedDate)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-6">
             @Html.DisplayFor(model => model.JoinedDate)
         </dd>
     </dl>
@@ -55,3 +67,4 @@
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
+</center>
