--- a/HireManagement/HireManagement/Views/WorkersScaffold/Edit.cshtml
+++ b/HireManagement/HireManagement/Views/WorkersScaffold/Edit.cshtml
@@ -3,13 +3,13 @@
 @{
     ViewData["Title"] = "Edit";
 }
-
+<center>
 <h1>Edit</h1>
 
 <h4>Worker</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row  bg-white col-6 border-dark rounded text-center">
+    <div class="col-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ID" />
@@ -39,6 +39,11 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="EmployedOnPosition" class="control-label"></label>
+                <input asp-for="EmployedOnPosition" class="form-control" />
+                <span asp-validation-for="EmployedOnPosition" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="JoinedDate" class="control-label"></label>
                 <input asp-for="JoinedDate" class="form-control" />
                 <span asp-validation-for="JoinedDate" class="text-danger"></span>
@@ -53,7 +58,7 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
+</center>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
