--- a/HireManagement/HireManagement/Views/WorkersScaffold/Index.cshtml
+++ b/HireManagement/HireManagement/Views/WorkersScaffold/Index.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<HireManagement.Models.Worker>
-
+@inject SignInManager<ApplicationUser> signInManager;
 @{
     ViewData["Title"] = "Index";
 }
-
-<h1>Index</h1>
+<div class="animated bounceInDown">
+<h1>Welcome to the Workers' lobby</h1>
 <form asp-controller="WorkersScaffold" asp-action="Index" method="get">
     <p>
         Search: <input type="text" name="searchText">
@@ -39,32 +39,42 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FirstName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.LastName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Age)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.JoinedDate)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FirstName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.LastName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Age)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.City)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Email)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.JoinedDate)
+                </td>
+                <td>
+                    @if (signInManager.IsSignedIn(User) && User.IsInRole("Moderator") || User.IsInRole("Admin") || item.UserID == this.User.FindFirstValue(ClaimTypes.NameIdentifier))
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.ID">| Edit |</a>
+                    }
+                    <a asp-action="Details" asp-route-id="@item.ID"> View </a>
+
+                    @if (signInManager.IsSignedIn(User) && User.IsInRole("Admin") || User.IsInRole("Moderator")||item.UserID == this.User.FindFirstValue(ClaimTypes.NameIdentifier))
+                    {
+                        <a asp-action="Delete" asp-route-id="@item.ID">| Delete |</a>
+                    }
+
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
+</div>
