--- a/HireManagement/HireManagement/Views/Administration/ListRoles.cshtml
+++ b/HireManagement/HireManagement/Views/Administration/ListRoles.cshtml
@@ -21,7 +21,7 @@
                     <h5 class="card-title">@role.Name</h5>
                 </div>
                 <div class="card-footer">
-                    <form asp-action="DeleteUser" asp-route-id="@role.Id" method="post">
+                    <form asp-action="DeleteRole" asp-route-id="@role.Id" method="post">
                         <a class="btn btn-primary" asp-action="EditRole" asp-controller="Administration" asp-route-id="@role.Id">
                             Edit
                         </a>
