--- a/HireManagement/HireManagement/Views/Home/Workers.cshtml
+++ b/HireManagement/HireManagement/Views/Home/Workers.cshtml
@@ -37,20 +37,20 @@
             <p class="card-text"><small class="text-muted">/Storage werehouse worker/</small></p>
         </div>
     </div>
-    <div class="card m-3 text-center">
-        <img class="card-img-top" src="~/images/femployee.jpg" alt="Card image cap">
+    <div class="card m-3">
+        <img class="card-img-top" src="http://www.bet.com/news/national/photos/2013/08/top-15-free-apps-for-college-students/_jcr_content/image.custom0x0.dimg/081313-national-college-apps-student-teen-woman-cell-phone-smart-phone-smiling-happy.jpg" alt="Card image cap">
         <div class="card-body">
             <h5 class="card-title">Anna Nickelson</h5>
             <p class="card-text">This app is simply great. Never been actually keen on using those kind of apps, but HireManagement changed my mind. Give it a try!</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <p class="card-text"><small class="text-muted">/Birmingham university student/</small></p>
         </div>
     </div>
     <div class="card m-3">
-        <img class="card-img-top" src="~/images/meployee.jpg" alt="Card image cap">
+        <img class="card-img-top" src="https://pixfeeds.com/images/32/609406/1200-535193656-computer-programmer.jpg" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+            <h5 class="card-title">Cvetan Haritonov</h5>
+            <p class="card-text">Since I am working mostly from home, HireManagement became a game changer for me. I bet you won't find a better application than this!</p>
+            <p class="card-text"><small class="text-muted">/Freelancer/</small></p>
         </div>
     </div>
 </div>
