--- a/HireManagement/HireManagement/Views/WorkersScaffold/Create.cshtml
+++ b/HireManagement/HireManagement/Views/WorkersScaffold/Create.cshtml
@@ -60,7 +60,7 @@
         </div>
 
         <div>
-            <a asp-action="Index">Back to List</a>
+            <a class="bg-white text-black rounded" asp-action="Index">Back to List</a>
         </div>
     </center>
 @section Scripts {
