--- a/HireManagement/HireManagement/Views/WorkersScaffold/Delete.cshtml
+++ b/HireManagement/HireManagement/Views/WorkersScaffold/Delete.cshtml
@@ -62,9 +62,9 @@
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="ID" />
+        <input type="hidden" asp-for="WorkerID" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a class="bg-white text-black rounded" asp-action="Index">Back to List</a>
     </form>
 </div>
 </center>
