--- a/HireManagement/HireManagement/Views/WorkersScaffold/Details.cshtml
+++ b/HireManagement/HireManagement/Views/WorkersScaffold/Details.cshtml
@@ -61,7 +61,7 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.ID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.WorkerID">Edit</a> |
+    <a class="bg-white text-black rounded" asp-action="Index">Back to List</a>
 </div>
 </center>
