--- a/HireManagement/HireManagement/Views/Administration/EditUser.cshtml
+++ b/HireManagement/HireManagement/Views/Administration/EditUser.cshtml
@@ -61,7 +61,7 @@
             }
         </div>
         <div class="card-footer">
-            <a href="#" style="width:auto" class="btn btn-primary">
+            <a  asp-controller="Administration"    asp-action="ListRoles" style="width:auto" class="btn btn-primary">
                 Manage Roles
             </a>
         </div>
