--- a/HireManagement/HireManagement/Views/ContractsScaffold/Create.cshtml
+++ b/HireManagement/HireManagement/Views/ContractsScaffold/Create.cshtml
@@ -51,7 +51,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="bg-white text-black rounded" asp-action="Index">Back to List</a>
 </div>
 </center>
 @section Scripts {
