--- a/HireManagement/HireManagement/Views/ContractsScaffold/Edit.cshtml
+++ b/HireManagement/HireManagement/Views/ContractsScaffold/Edit.cshtml
@@ -8,8 +8,8 @@
 
 <h4>Contract</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="row bg-white rounded text-center col-6">
+    <div class="col-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ContractID" />
@@ -35,12 +35,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Information" class="control-label"></label>
-                <textarea asp-for="Information" class="form-control" />
+                <input asp-for="Information" class="form-control" />
                 <span asp-validation-for="Information" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Preference" class="control-label"></label>
-                <textarea asp-for="Preference" class="form-control" />
+                <input asp-for="Preference" class="form-control" />
                 <span asp-validation-for="Preference" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -51,7 +51,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="bg-white text-black rounded" asp-action="Index">Back to List</a>
 </div>
 </center>
 @section Scripts {
