--- a/HireManagement/HireManagement/Views/WorkersScaffold/Edit.cshtml
+++ b/HireManagement/HireManagement/Views/WorkersScaffold/Edit.cshtml
@@ -12,7 +12,7 @@
     <div class="col-12">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="ID" />
+            <input type="hidden" asp-for="WorkerID" />
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
                 <input asp-for="FirstName" class="form-control" />
@@ -56,7 +56,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a class="bg-white text-black rounded" asp-action="Index">Back to List</a>
 </div>
 </center>
 @section Scripts {
