Some Regex final updates

--- a/HireManagement/HireManagement/Views/ContractsScaffold/Delete.cshtml
+++ b/HireManagement/HireManagement/Views/ContractsScaffold/Delete.cshtml
@@ -36,9 +36,15 @@
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.Reward)
                 </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Information)
+                </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.Information)
                 </dd>
+                <dt class="col-sm-2">
+                    @Html.DisplayNameFor(model => model.Preference)
+                </dt>
                 <dd class="col-sm-10">
                     @Html.DisplayFor(model => model.Preference)
                 </dd>
